# IN4110

./: .gitignore  README.md
assignment1/: friendly_greeting.txt  gitconflict.txt  myfirstcommit.txt
assignment2/: analyze_pollution_data.py  copy_and_move.sh
assignment2/analytic_tools/: utilities.py
assignment2/tests/: test_analyze_pollution_data.py  test_utilities.py
assignment3/: README.md  profile-report.md  pyproject.toml  setup.py
assignment3/in3110_instapy/: cli.py  cython_filters.c  cython_filters.html  cython_filters.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  test_cython.py  timing.py
assignment3/test/: conftest.py  test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py
assignment4/olympic_games_results/: best_of_sport_by_Gold.md
assignment4/tables_of_anniversaries/: anniversaries_november.md
assignment5/: Energy_prices_over_time.html  README.md  app.py  http_cache.sqlite  strompris.py
assignment5/templates/: strompris.html
assignment5/tests/: conftest.py  test_app.py  test_files.py  test_strompris.py
