[build-system]
requires = [
    "setuptools>=61",
    # 4110 only:
    # "cython>=3",
]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
requires-python = ">=3.8"
license = {text = "MIT License"}
name = "in3110_instapy"
description = "This package serves the purpose of changing the color of an image to black and white or sepia"
readme = "README.md"
dependencies = [
    "numpy",
    "numba",
    "pillow",
    "line-profiler"
]


[project.scripts]
in3110_instapy = "instapy.cli:main"

#["./in3110_instapy/__init__.py", "./in3110_instapy/__main__.py", "./in3110_instapy/cli.py", "./in3110_instapy/cython_filters.py", "./in3110_instapy/io.py", "./in3110_instapy/numba_filters.py", "./in3110_instapy/numpy_filters.py", "./in3110_instapy/profiling.py", "./in3110_instapy/python_filters.py", "./in3110_instapy/timing.py"]

#["package-dir:in3110_instapy"]